Revert "fix dark mode 2"
This reverts commit f29c8ead3f98b0ed57ea7a06613e75bf11e47f4c.

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -60,6 +60,8 @@ body {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   background-color: var(--app-bg);
+  background-image: var(--app-bg-gradient);
+  background-attachment: fixed;
   color: var(--app-text);
   scrollbar-gutter: stable;
 }
@@ -103,6 +105,7 @@ img {
   min-height: 100%;
   background-color: var(--app-bg);
   background-image: var(--app-bg-gradient);
+  background-attachment: fixed;
 }
 
 .app-wrapper {
@@ -113,6 +116,7 @@ img {
   margin: 0 auto;
   background-color: var(--app-bg);
   background-image: var(--app-bg-gradient);
+  background-attachment: fixed;
   overflow: clip;
 }
 
@@ -312,6 +316,8 @@ html.theme-dark {
 html.theme-dark,
 html.theme-dark body {
   background-color: var(--app-bg);
+  background-image: var(--app-bg-gradient);
+  background-attachment: fixed;
   color: var(--app-text);
 }
 
